<resources>
    <string name="app_name">唱跳rap篮球</string>
    <string name="welcome_text">ikun之家~</string>

    <!-- 第一排按钮 -->
    <string name="btn_sing">唱(完)</string>
    <string name="btn_dance">跳</string>
    <string name="btn_rap">Rap</string>
    <string name="btn_basketball">篮球</string>

    <!-- 第二排按钮 -->
    <string name="btn_intro">介绍</string>
    <string name="btn_what">干嘛</string>
    <string name="btn_whatDJ">干嘛Dj</string>
    <string name="btn_chicken">鸡</string>

    <!-- Toast常量消息 -->
    <string name="toast_net0">已连接到 WiFi 网络</string>
    <string name="toast_net1">已连接到移动数据网络</string>
    <string name="toast_net2">已连接到未知网络类型</string>
    <string name="toast_net3">网络连接已断开</string>

    <!-- Message 常量 -->
    <string name="trans0">你好，这是来自MainActivity的数据</string>
    <string name="trans1">坤坤热点：</string>
    <string name="trans2">用户取消了操作</string>
    <string name="trans3">切换为英文</string>

    <string name="trans4">服务启动</string>
    <string name="trans5">服务停止</string>
    <string name="trans6">服务绑定</string>
    <string name="trans7">服务已经绑定</string>
    <string name="trans8">服务解绑</string>
    <string name="trans9">服务未绑定</string>
    <string name="trans10">服务正在运行中</string>
    <string name="trans11">服务已经启动</string>

    <!-- Notification 常量 -->
    <string name="notification0">蔡徐坤给你发了 </string>
    <string name="notification1">前台服务运行中</string>
    <string name="notification3"> 条私信</string>

    <!-- broadcast常量 -->
    <string name="broadcast_0">爱坤</string>
    <string name="broadcast_1">感谢收听哥哥的歌</string>

    <!-- notes -->
    <string name="select_note_prompt">选择笔记</string>
    <string name="title_hint">输入标题</string>
    <string name="content_hint">输入内容</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="cancel_confirmation">确定要取消吗？未保存的内容将会丢失。</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="save_success">笔记保存成功！</string>
    <string name="title_empty">标题不能为空</string>
    <string name="default_note_title">无标题笔记</string>
    <string name="add">+</string>

    <!-- 重构后的主界面中文描述 -->
    <string name="card1">环境和调试</string>
    <string name="card1btn1">Hello</string>
    <string name="card1btn2">日志</string>
    <string name="card1btn3">待开放</string>

    <string name="card2">Activity</string>
    <string name="card2btn1">放音乐</string>
    <string name="card2btn2">待开放</string>
    <string name="card2btn3">待开放</string>

    <string name="card3">UI 控件和布局</string>
    <string name="card3btn1">CXK唱</string>
    <string name="card3btn2">CXK跳</string>
    <string name="card3btn3">Rap</string>

    <string name="card4">组件交互</string>
    <string name="card4btn1">对话框</string>
    <string name="card4btn2">打篮球</string>
    <string name="card4btn3">待开放</string>

    <string name="card5">Service</string>
    <string name="card5btn1">长通知</string>
    <string name="card5btn2">后台音</string>
    <string name="card5btn3">待开放</string>

    <string name="card6">Broadcast</string>
    <string name="card6btn1">监开机</string>
    <string name="card6btn2">监网络</string>
    <string name="card6btn3">自定义</string>

    <string name="card7">异步处理</string>
    <string name="card7btn1">计时器</string>
    <string name="card7btn2">待开放</string>
    <string name="card7btn3">待开放</string>

    <string name="card8">数据存储</string>
    <string name="card8btn1">SP存储</string>
    <string name="card8btn2">SQLite</string>
    <string name="card8btn3">待开放</string>

    <string name="card9">异常处理</string>
    <string name="card9btn1">ANR</string>
    <string name="card9btn2">Crash</string>
    <string name="card9btn3">异常</string>

    <string name="card10">ContentProvider</string>
    <string name="card10btn1">CRUD</string>
    <string name="card10btn2">待开放</string>
    <string name="card10btn3">待开放</string>

    <string name="nextPage">下一章</string>
    <string name="prePage">上一章</string>

    <!-- MMI -->
    <string name="cardMMI1">TP/LCD</string>
    <string name="cardMMI1Btn1">调亮度</string>
    <string name="cardMMI1Btn2">看图片</string>
    <string name="cardMMI1Btn3">触摸屏</string>

    <string name="cardMMI2">Key/Flash/Vibrator</string>
    <string name="cardMMI2Btn1">按键</string>
    <string name="cardMMI2Btn2">闪光灯</string>
    <string name="cardMMI2Btn3">振动</string>

    <string name="cardMMI3">Camera</string>
    <string name="cardMMI3Btn1">拍照片</string>
    <string name="cardMMI3Btn2">待开放</string>
    <string name="cardMMI3Btn3">待开放</string>

    <string name="cardMMI4">Audio</string>
    <string name="cardMMI4Btn1">听音乐</string>
    <string name="cardMMI4Btn2">录音</string>
    <string name="cardMMI4Btn3">待开放</string>

    <string name="cardMMI5">Sensor</string>
    <string name="cardMMI5Btn1">光感</string>
    <string name="cardMMI5Btn2">距离</string>
    <string name="cardMMI5Btn3">重力</string>
    <string name="cardMMI5Btn4">加速</string>
    <string name="cardMMI5Btn5">陀螺</string>
    <string name="cardMMI5Btn6">地磁</string>
    <string name="cardMMI5Btn7">小球</string>
    <string name="cardMMI5Btn8">指南</string>

    <string name="cardMMI6">Charge</string>
    <string name="cardMMI6Btn1">USB</string>
    <string name="cardMMI6Btn2">OTC</string>
    <string name="cardMMI6Btn3">Power</string>

    <string name="cardMMI7">BT/WIFI/GPS</string>
    <string name="cardMMI7Btn1">蓝牙</string>
    <string name="cardMMI7Btn2">WIFI</string>
    <string name="cardMMI7Btn3">GPS</string>
</resources>
